# microservices

./: .env  .gitignore  .pre-commit-config.yaml  README.md  deployment.md  development.md  docker-compose.override.yml  docker-compose.yaml  docker-compose.yml
.github/: dependabot.yml
services/users/: Dockerfile  alembic.ini  pyproject.toml
services/users/app/: backend_pre_start.py  crud.py  main.py  models.py  schemas.py
services/users/app/alembic/versions/: 1fd0e8dd71b0_initial_data.py  7dcdd1fc6434_intial_data.py
services/users/app/api/: config.py  deps.py
services/users/app/api/v1/: deps.py  main.py
services/users/app/api/v1/routes/: management.py  users.py  utils.py
services/users/app/core/: config.py  database.py  security.py
services/users/app/tests/: conftest.py
services/users/app/tests/crud/: test_user.py
services/users/app/tests/utils/: utils.py
services/users/scripts/: lint.sh  prestart.sh  run-tests.sh  tests-start.sh
services/users/src/: backend_pre_start.py  crud.py  events.py  main.py  models.py  schemas.py  subscribers.py  tasks.py
services/users/src/alembic/versions/: 0467cfb3e131_initial_data.py  1c0ec82b062b_initial_data.py  290ce2ba3e9e_initial_data.py  379c417d99ab_intial_data.py  595d5cc1a50c_initial_data.py  6bfbadad78dc_initial_data.py  6c8c696fb21f_initial_data.py  8cb5b7d73df4_initial_data.py  a19a1c705501_intial_data.py  ad589749c020_initial_data.py  c05c65914281_initial_data.py  cde51a9bdbab_initial_data.py  d00386295a55_initial_data.py  d050681b0509_initial_data.py  da7ab6aeb618_initial_data.py
services/users/src/api/: config.py  events.py
services/users/src/api/v1/: main.py
services/users/src/broker/: main.py  subscribers.py
services/users/src/core/: config.py
services/users/src/tests/: conftest.py
services/users/src/tests/api/: test_events.py
services/users/src/tests/crud/: test_user.py
services/users/src/tests/utils/: utils.py
services/users/tests/: conftest.py
services/users/tests/api/routes/: test_management.py
services/users/tests/crud/: test_user.py
services/users/tests/utils/: utils.py
(+272 files in other folders)
